# web_link_timer

./: CMakeLists.txt  README.md  README.rst  char_tools.cpp  char_tools.h  cmake_clean.sh  flags.h  keyboardinputsender.cpp  keyboardinputsender.h  logger.cpp  logger.h  main.cpp  run_web_link_timer.sh  timer.cpp  timer.h  web_link_timer.pro  weblinkmanager.cpp  weblinkmanager.h  wlt.bat
config/: playlist.wvt.ini
